--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ layout: default
 </style>
 
 <center>
-	<p class="index-content">welcome and my blog</p>
+	<p class="index-content">welcome and my word</p>
 </center>
